--- a/locust/docker-compose.yml
+++ b/locust/docker-compose.yml
@@ -3,8 +3,79 @@ version: '3'
 services:
   locust:
     image: locustio/locust
-    command: -f /mnt/locust-tasks/tasks.py --host=http://localhost:8080
+    command: -f /mnt/locust-tasks/tasks.py --host=http://localhost:80
     ports:
       - "8089:8089"
     volumes:
       - ./locust-tasks:/mnt/locust-tasks
+    depends_on:
+      - nginx
+
+  db:
+    image: mysql:5.7
+    volumes:
+      - db_data:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: mysecretpassword
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
+
+  wordpress1:
+    image: wordpress:5.4.2-php7.2-apache
+    depends_on:
+      - db
+    restart: always
+    environment:
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress
+    volumes:
+      - wordpress1_data:/var/www/html
+
+  wordpress2:
+    image: wordpress:5.4.2-php7.2-apache
+    depends_on:
+      - db
+    restart: always
+    environment:
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress
+    volumes:
+      - wordpress2_data:/var/www/html
+
+  wordpress3:
+    image: wordpress:5.4.2-php7.2-apache
+    depends_on:
+      - db
+    restart: always
+    environment:
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress
+    volumes:
+      - wordpress3_data:/var/www/html
+
+  nginx:
+    image: nginx:1.19.0
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./sites-available:/etc/nginx/sites-available:ro
+    depends_on:
+      - wordpress1
+      - wordpress2
+      - wordpress3
+
+volumes:
+  db_data:
+  wordpress1_data:
+  wordpress2_data:
+  wordpress3_data:
